--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zap-up-api",
   "version": "1.0.0",
   "description": "Official ZAP-UP Discord Bot API Wrapper.",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
