--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ytdl-core": "^4.4.3",
     "spotify-api.js": "^5.0.3",
     "jimp": "^0.16.1",
+    "path": "^0.12.7",
     "moment": "^2.29.1"
   },
   "devDependencies": {},
